--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,20 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "peerjs": "^1.5.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "daisyui": "^5.0.48",
     "npm-run-all2": "^8.0.4",
+    "peer": "^1.0.2",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
