--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "peerjs": "^1.5.5",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
